--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
            context: ./
            file: ./Dockerfile
            push: true
-           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/simplewhaledemo:latest
+           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:latest
            
       - name: Image digest
         run: echo {{ steps.docker_build_outputs.digest }}
