--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,14 @@ jobs:
     steps:
       - name: Check Out Repo agha
         uses: actions/checkout@v2
+        
+      - name: Cache Docker layers
+        uses: action/cache@v2
+        with:
+           path: /tmp/.buildx-cache
+           key: ${{ runner.os }}-buildx-${{ github.sha }}
+           restore-keys: |
+               ${{ runner.os }}-buildx-
       
       - name: Login to Docker Hub
         uses: docker/login-action@v1
@@ -29,8 +37,11 @@ jobs:
         with:
            context: ./
            file: ./Dockerfile
+           builder: ${{ steps.buildx.output.name }}
            push: true
            tags: ${{ secrets.DOCKER_HUB_USERNAME }}/simplewhale:latest
+           cache-from: type=local,src=/tmp/.buildx-cache
+           cache-to: type=local,dest=/tmp/.buildx-cache
            
       - name: Image digest
         run: echo {{ steps.docker_build_outputs.digest }}
