--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,9 @@ name: CI to Docker Hub of ali
 
 on:
   push:
-    branches: [ main ]
+    tags:
+      - "v*.*.*"
+    #branches: [ main ]
 
 jobs:
   build:
